<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Home Automation</string>
    <string name="about">About Developers</string>
    <string name="action_settings">Settings</string>
    <string name="send">Device 1</string>
    <string name="send2">Device 2</string>
    <string name="send3">Device 3</string>
    <string name="send4">Device 4</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
     <string name="title_connected_to">connected</string>
     <string name="title_connecting">connecting..</string>
     <string name="title_not_connected">notconnected</string>
     <string name="title_paired_devices">Paired Devices</string>
     <string name="title_other_devices">Other Available Devices</string>
     <string name="button_scan">Scan for devices</string>
     <string name="scanning">scanning for devices..</string>
     <string name="select_device">select a device to connect</string>
     <string name="none_paired">No devices have been paired</string>
     <string name="none_found">No devices found</string>
     <string name="device_connect">Secure connection</string>
     <string name="device_connect_insecure">Insecure connection</string>
     <string name="discoverable">Make discoverable</string>
     <string name="device1">Device 1</string>
     <string name="status1">Device 1 status</string>
     <string name="device2">Device 2</string>
     <string name="status2">Device 2 status</string>
     <string name="device3">Device 3</string>
     <string name="status3">Device 3 status</string>
     <string name="device4">Device 4</string>
     <string name="status4">Device 4 status</string>
     <string name="abt">ITSP, First Year Undergraduates, IIT Bombay</string>
     


</resources>
