<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
android:layout_height="match_parent" 
android:layout_width="match_parent" 
android:orientation="vertical" 
xmlns:android="http://schemas.android.com/apk/res/android">

<TextView 
    android:layout_height="wrap_content" 
    android:layout_width="match_parent"  
    android:paddingLeft="5dp" 
    android:textColor="#fff" 
    android:background="#666" 
    android:visibility="gone" 
    android:text="@string/title_paired_devices" 
    android:id="@+id/title_paired_devices"/>
<ListView 
    android:layout_height="wrap_content" 
    android:layout_width="match_parent" 
    android:id="@+id/paired_devices" 
    android:layout_weight="1" 
    android:stackFromBottom="true"/>
<TextView android:layout_height="wrap_content" 
    android:layout_width="match_parent"
    
    android:paddingLeft="5dp" 
    android:textColor="#fff" 
    android:background="#666" 
    android:visibility="gone" 
    android:text="@string/title_other_devices" 
    android:id="@+id/title_new_devices"/>
<ListView 
    android:layout_height="wrap_content" 
    android:layout_width="match_parent" 
    android:id="@+id/new_devices" 
    android:layout_weight="2" 
    android:stackFromBottom="true"/>
<Button android:layout_height="wrap_content" 
    android:layout_width="match_parent" 
    android:text="@string/button_scan" 
    android:id="@+id/button_scan"/>


</LinearLayout>
